de.tecsi.docker.test.config/docker-test-config/templates/external-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-external
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 3306
    protocol: TCP
