de.tecsi.docker.test.config/docker-test-config/templates/internal-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-internal
  labels:
    run: test-internal
spec:
  type: LoadBalancer
  ports:
  - name: ClusterIP
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: test-internal
