de.tecsi.docker.test.config/docker-test-config/templates/internal.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: test-internal
  namespace: docker-test
spec:
  selector:
    matchLabels:
      app: test-internal
  replicas: 1
  strategy:
     type: RollingUpdate  
  template:
    metadata:
      labels:
        app: test-internal
    spec:
      serviceAccountName: docker-test-account
      containers:
      - name: internal
        image: docker.io/jeskesigi/docker-test-internal:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        - containerPort: 50505
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /logs
          name: test-mount
          subPath: logs
      volumes:
      - name: config
        configMap:
          name: test-internal-config
          items:
          - key: docker-test-internal.properties
            path: docker-test-internal.properties
      - name: test-mount
        persistentVolumeClaim:
          claimName: test-mount-claim

---

kind: Service
apiVersion: v1
metadata:
  name: test-internal
  namespace: docker-test
  labels:
    run: test-internal
spec:
  type: NodePort
  ports:
  - name: service-port
    port: 8081
    nodePort: 32307
    protocol: TCP
  - name: debug-port
    port: 50505
    nodePort: 30505
    targetPort: 50505
    protocol: TCP
  selector:
    app: test-internal
