de.tecsi.docker.test.config/docker-test-config/templates/mysql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  labels:
    run: mysql
spec:
  type: ClusterIP
  ports:
  - name: mysql-port
    port: 3306
  selector:
    app: mysql
