de.tecsi.docker.test.config/docker-test-config/templates/mysql.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      hostNetwork: true
      containers:
      - name: mysql
        image: docker.io/library/mysql:5.7.44
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: test-mount
          subPath: mysql-data
      volumes:
      - name: test-mount
        persistentVolumeClaim:
          claimName: test-mount-claim

---

kind: Service
apiVersion: v1
metadata:
  name: mysql
  labels:
    run: mysql
spec:
  type: NodePort
  ports:
  - port: 3306
    nodePort: 32306
  selector:
    app: mysql
