de.tecsi.docker.test.config/docker-test-config/templates/service-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: test-service-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 8000
    protocol: HTTP
