de.tecsi.docker.test.config/docker-test-config/templates/external-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-service
spec:
  hosts:
  - msgn19818.hyperv.net
  ports:
  - number: 8082
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
