de.tecsi.docker.test.config/docker-test-config/templates/service-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: test-service-route
spec:
  parentRefs:
  - name: test-service-gateway
  hostnames: ["localhost"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /test-service
    backendRefs:
    - name: test-service
      port: 8080
